--- a/resources/sass/elements/_links.scss
+++ b/resources/sass/elements/_links.scss
@@ -345,10 +345,6 @@
                 p {
                     margin: 0;
                 }
-
-                &:last-child {
-                    margin-top: 5px;
-                }
             }
 
             &.folder {
